Use lowerCamelCase for uri parameter
